--- a/public/css/style.css
+++ b/public/css/style.css
@@ -276,13 +276,13 @@ textarea::placeholder {
 	transform: none;
 }
 .banner-swiper .swiper-slide {
-	padding: 175px 0;
+	padding: 450px 0;
 	color: #fff;
 	text-align: center;
-	background-position: center top;
+	background-position: center bottom;
 	background-size: cover;
 	background-repeat: no-repeat;
-	min-height: 640px;
+	min-height: 850px;
 	
 }
 .banner-swiper .swiper-slide::before {
@@ -299,17 +299,25 @@ textarea::placeholder {
 .banner-content {
 	max-width: 750px;
 	margin: 0 auto;
+	
+
+	
 }
 .banner-subtitle {
 	font-size: 16px;
 	text-transform: uppercase;
 	margin-bottom: 10px;
 	margin-top: 180px;
+	
+
 }
 .banner-title {
 	font-size: 46px;
 	font-weight: 300;
 	line-height: 1.3;
+	background: linear-gradient(90deg, rgba(104,230,45,1) 0%, rgba(1,80,44,1) 50%, rgba(14,210,23,1) 100%); border-radius: 5px;
+
+	
 
 }
 .swiper-button-next {
