--- a/public/css/estilosmodal.css
+++ b/public/css/estilosmodal.css
@@ -35,6 +35,7 @@ html{
    outline: .1rem solid #ccc;
    outline-offset: -1.5rem;
    cursor: pointer;
+   border-radius: 10px;
 }
 
 .container2 .products-container .product:hover{
@@ -47,6 +48,7 @@ html{
 
 .container2 .products-container .product img{
    height: 25rem;
+   border-radius: 10px;
 
 
 }
@@ -55,7 +57,7 @@ html{
    transform: scale(.9);
     /* ESTO LE DA EFECTO AL HOVER */
    border-radius:10%;
-   -webkit-border-radius:50%;
+   -webkit-border-radius:10%;
    box-shadow: 0px 0px 15px 15px #0f8823;
    -webkit-box-shadow: 0px 0px 15px 15px #0f8823;
 
