--- a/public/css/stylo.css
+++ b/public/css/stylo.css
@@ -6,3 +6,24 @@
   text-decoration: underline;
 
 }
+
+.video-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* Relación de aspecto 16:9 */
+  height: 0;
+  overflow: hidden;
+  border-radius: 10px;
+
+}
+.video-container video {
+  position: absolute;
+  top: 50;
+  left: 50;
+  width: 100%;
+  height: 100%;
+
+  
+}
+
+
