--- a/public/css/stylo2.css
+++ b/public/css/stylo2.css
@@ -12,7 +12,7 @@
     display: none;
 }
 
-button1 {
+#toggle-button {
     background-color: #20cc05;
     color: white;
     border: none;
@@ -24,12 +24,12 @@ button1 {
     transition: background-color 0.3s ease;
 }
 
-button1:hover {
+#toggle-button:hover {
     background-color: #1fecfe;
 }
 
-button2 {
-    background-color: #05c5cc;
+#toggle-button-en {
+    background-color: #20cc05;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -40,8 +40,23 @@ button2 {
     transition: background-color 0.3s ease;
 }
 
-button2:hover {
-    background-color: #40fe1f;
+#toggle-button-en:hover {
+    background-color: #05c5cc ;
+}
+
+#botonTraduccion{
+    background-color: #150aae;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    font-size: 12px;
+    margin-top: 10px;
+    transition: background-color 0.3s ease;
+}
+#botonTraduccion:hover{
+    background-color: #05c5cc ;
 }
 
 /* Responsive styles */
