--- a/public/css/stylo.css
+++ b/public/css/stylo.css
@@ -26,4 +26,21 @@
   
 }
 
+.video-container2 {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* Relación de aspecto 16:9 */
+  height: 100;
+  overflow: hidden;
+  border-radius: 10px;
 
+}
+.video-container2 video {
+  position: absolute;
+  top: 50;
+  left: 50;
+  width: 100%;
+  padding: 0%;
+
+  
+}
